--- a/AngularJSTest/packages.config
+++ b/AngularJSTest/packages.config
@@ -7,7 +7,7 @@
   <package id="DotNetOpenAuth.OpenId.Core" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.4.12333" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
-  <package id="jQuery" version="1.8.2" targetFramework="net45" />
+  <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net45" />
@@ -33,5 +33,6 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
+  <package id="Twitter.Bootstrap" version="2.3.1" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
