--- a/AngularJSTest/AngularJSTest.csproj
+++ b/AngularJSTest/AngularJSTest.csproj
@@ -41,7 +41,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.AspNet.SignalR.Core">
+      <HintPath>..\..\NuGet Packages\Microsoft.AspNet.SignalR.Core.1.0.1\lib\net40\Microsoft.AspNet.SignalR.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.Owin">
+      <HintPath>..\..\NuGet Packages\Microsoft.AspNet.SignalR.Owin.1.0.1\lib\net45\Microsoft.AspNet.SignalR.Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.SystemWeb">
+      <HintPath>..\..\NuGet Packages\Microsoft.AspNet.SignalR.SystemWeb.1.0.1\lib\net45\Microsoft.AspNet.SignalR.SystemWeb.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Owin.Host.SystemWeb">
+      <HintPath>..\..\NuGet Packages\Microsoft.Owin.Host.SystemWeb.1.0.1\lib\net45\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin">
+      <HintPath>..\..\NuGet Packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
@@ -186,6 +201,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\SignalRBooksController.cs" />
     <Compile Include="Controllers\SimpleBooksController.cs" />
     <Compile Include="Controllers\SpaBooksController.cs" />
     <Compile Include="Controllers\StaticController.cs" />
@@ -193,6 +209,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Hubs\BooksHub.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Book.cs" />
     <Compile Include="Models\BooksRepository.cs" />
@@ -200,7 +217,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="App\Controllers\SignalRBooksCtrl.ts" />
+    <Content Include="App\Controllers\SignalRBooksCtrl.js">
+      <DependentUpon>SignalRBooksCtrl.ts</DependentUpon>
+    </Content>
+    <Content Include="App\Controllers\SignalRBooksCtrl.min.js">
+      <DependentUpon>SignalRBooksCtrl.ts</DependentUpon>
+    </Content>
+    <Content Include="Scripts\jquery.signalR-1.0.1.js" />
+    <Content Include="Scripts\jquery.signalR-1.0.1.min.js" />
     <Content Include="Views\SpaBooks\Page4.cshtml" />
+    <Content Include="Views\SignalRBooks\Index.cshtml" />
     <TypeScriptCompile Include="App\Services\Books.ts" />
     <Content Include="App\Services\Books.js">
       <DependentUpon>Books.ts</DependentUpon>
