--- a/AngularJSTest/AngularJSTest.csproj
+++ b/AngularJSTest/AngularJSTest.csproj
@@ -538,6 +538,7 @@
     <Content Include="Scripts\i18n\angular-locale_zu.js" />
     <Content Include="Scripts\jquery.signalR-1.0.1.js" />
     <Content Include="Scripts\jquery.signalR-1.0.1.min.js" />
+    <Content Include="Scripts\typings\signalr\signalr.d.ts" />
     <Content Include="Views\SpaBooks\Page4.cshtml" />
     <Content Include="Views\SignalRBooks\Index.cshtml" />
     <TypeScriptCompile Include="App\Services\Books.ts" />
