--- a/AngularJSTest/packages.config
+++ b/AngularJSTest/packages.config
@@ -44,6 +44,7 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="signalr.TypeScript.DefinitelyTyped" version="0.0.2" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="2.3.1" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
